--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <footer>
-        created by Kaio H. Santos - devChallenges.io
+        created by <a href='https://github.com/KaioSantos32'>Kaio H. Santos</a> - devChallenges.io
     </footer>
 
 </body>
