--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
 
 <body>
 
-    <div>
-        <h1 class='notFound'>404 Not Found</h1>
-    </div>
-    <div class='scarecrow'>
-        <img sizes="(min-width: 576px) 540px, 100vw" src="img/Scarecrow.png">
+    <h1 class='notFound'>404 Not Found</h1>
+
+    <div class = 'content'>
+        <div class='scarecrow'>
+            <img sizes="(min-width: 576px) 540px, 100vw" src="img/Scarecrow.png">
+        </div>
+        <div class='noticiaContent'>
+            <p class='badNews'>Tenho uma péssima notícia...</p>
+            <p class='conteudo'>A Página que você esta procurando pode ter sido removida ou esta temporariamente fora do ar.</p>
+        </div>
+        <div>
+            <button class='homePage' href='#'>Voltar ao Inicio</button>
+        </div>
+
+        <footer>
+            created by Kaio H. Santos - devChallenges.io
+        </footer>
     </div>
 
-    <div class='noticiaContent'>
-        <p class='badNews'>Tenho uma péssima notícia...</p>
-        <p class='conteudo'>A Página que você esta procurando pode ter sido removida ou esta temporariamente fora do ar.</p>
-    </div>
 
-    <div>
-        <button class='homePage' href='#'>Voltar ao Inicio</button>
-    </div>
-
-    <footer>
-        created by <a href='https://github.com/KaioSantos32'>Kaio H. Santos</a> - devChallenges.io
-    </footer>
 
 </body>
 
