modificação do footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <footer>
-            created by Kaio H. Santos - devChallenges.io
+            <p>created by <a href="">Kaio H. Santos</a> - devChallenges.io</p>
         </footer>
     </div>
 
