--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <footer>
-            <p>created by <a href="">Kaio H. Santos</a> - devChallenges.io</p>
+            <p>created by <a href="https://github.com/KaioSantos32">Kaio H. Santos</a> - devChallenges.io</p>
         </footer>
     </div>
 
